# discord-auto-message

./: .gitignore  README.md  pyproject.toml
app/: bot.py  cron.plist  get_faucet_every_24h.sh
